--- a/css/style.css
+++ b/css/style.css
@@ -140,6 +140,13 @@ color: var(--accent-color);
     text-transform: uppercase;
 }
 .hero-button {
+display: inline-block;
+padding: 10px 32px;
+min-width: 216px;
+border-radius: 4px;
+border: 1px solid transparent;
+
+
 background-color: var(--accent-color);
 color: var(--button-text-color);
 
@@ -148,11 +155,14 @@ letter-spacing: 0.06em;
 font-weight: 700;
 font-size: 16px;
 line-height: 1.88;
+text-align: center;
 }
 .hero-button:hover,
 .hero-button:focus {
     background-color: var(--booton-activ-color);
     cursor: pointer;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    
 }
 /* Особливості */
 .features-title {
@@ -274,6 +284,12 @@ line-height: 1.19;
 /* ---------ПОРТФОЛІО--------- */
 /* Кнопки */
 .filter-button {
+display: inline-block;
+padding: 6px 22px;
+min-width: 73px;
+border-radius: 4px;
+border: 1px solid transparent;
+
 color: var(--title-text-color);
 background-color: var(--secondary-background-color-pag);
 
@@ -282,12 +298,14 @@ letter-spacing: 0.03em;
 font-weight: 500;
 font-size: 16px;
 line-height: 1.63;
+text-align: center;
 }
 .filter-button:hover,
 .filter-button:focus {
     color: var(--button-text-color);
     background-color: var(--accent-color);
     cursor: pointer;
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 /* Проекти */
 .projects-link {
