--- a/css/style.css
+++ b/css/style.css
@@ -36,6 +36,9 @@
 }
 .list {
     list-style: none;
+
+    margin: 0;
+    padding: 0;
 }
 
 /* Header */
@@ -43,6 +46,12 @@
     background-color: var(--background-color-header);
     
     letter-spacing: 0.02em;
+}
+
+.container {
+    margin-left: auto;
+    margin-right: auto;
+    width: 1200px;
 }
 
 /* Логотип header*/
@@ -128,9 +137,15 @@ color: var(--accent-color);
 /* Main */
 
 /* Блок герой */
+.hero {
+    text-align: center;
+}
 .hero-title {
-    background-color: var(--background-color-footer);
+    margin-top: 0;
+    margin-bottom: 30px;
+    
     color: var(--button-text-color);
+    background-color: var(--background-color-footer);
     
     letter-spacing: 0.06em;
     font-weight: 900;
