--- a/css/style.css
+++ b/css/style.css
@@ -61,6 +61,8 @@
 .container {
     margin-left: auto;
     margin-right: auto;
+    padding-left: 20px;
+    padding-right: 20px;
     width: 1200px;
 }
 
