--- a/css/style.css
+++ b/css/style.css
@@ -29,6 +29,8 @@
     --background-color-header: #ffffff;
     --booton-activ-color: #188CE8;
     --background-color-footer: #2F303A;
+    /* рамка */
+    --color-border-projects: #eeeeee
 }
 
 .body {
@@ -423,4 +425,12 @@ color: var(--primary-text-color);
 letter-spacing: 0.03em;
 font-size: 16px;
 line-height: 1.88;
+}
+.projects-name {
+    margin-top: 0;
+    margin-bottom: 30px;
+    border-top: 1px solid transparent;
+    border-right: 1px solid var(--color-border-projects);
+    border-bottom: 1px solid var(--color-border-projects);
+    border-left: 1px solid var(--color-border-projects);
 }
