--- a/css/style.css
+++ b/css/style.css
@@ -57,6 +57,8 @@
 /* Header */
 .page-header {
     background-color: var(--background-color-header);
+
+    border-bottom: 1px solid var(--color-border-projects);
     
     letter-spacing: 0.02em;
 }
