--- a/css/style.css
+++ b/css/style.css
@@ -37,13 +37,27 @@
     color: var(--primary-text-color);
     font-family: Roboto, sans-serif;
 }
+/* Reset */
+h1,h2,h3,h4,h5,h6,p {
+    margin: 0;
+    padding: 0;
+}
+
+img {
+    display: block;
+}
 .list {
     list-style: none;
 
     margin: 0;
     padding: 0;
 }
+.link {
+    text-decoration: none;
+    color: currentColor;
+}
 
+/* Секції */
 .section {
     padding-top: 94px;
     padding-bottom: 94px;
@@ -62,7 +76,7 @@
     
     letter-spacing: 0.02em;
 }
-
+/* Центрування */
 .container {
     margin-left: auto;
     margin-right: auto;
@@ -380,7 +394,9 @@ line-height: 1.19;
 /* Кнопки */
 .filter-button {
 margin-top: 0;
+margin-right: 8px;
 margin-bottom: 50px;
+margin-left: 8px;
 
 display: inline-block;
 padding: 6px 22px;
