--- a/css/style.css
+++ b/css/style.css
@@ -45,6 +45,8 @@ h1,h2,h3,h4,h5,h6,p {
 
 img {
     display: block;
+    max-width: 100%;
+    height: auto;
 }
 .list {
     list-style: none;
@@ -65,7 +67,6 @@ img {
 
 .section.no-padding {
     padding-top: 0;
-    padding-bottom: 0;
 }
 
 /* Header */
@@ -80,8 +81,8 @@ img {
 .container {
     margin-left: auto;
     margin-right: auto;
-    padding-left: 20px;
-    padding-right: 20px;
+    padding-left: 15px;
+    padding-right: 15px;
     width: 1200px;
 }
 
@@ -243,7 +244,7 @@ text-align: center;
 
 .work-item {
 margin-top: 0;
-margin-bottom: 94px;
+margin-bottom: 0;
 }
 
 /* Наша команда */
@@ -261,17 +262,18 @@ font-size: 36px;
 line-height: 1.17;
 text-align: center;
 }
-.team {
-margin: 0;
-}
 
 .team-item {
 padding-top: 0;
 padding-bottom: 0;
 background-color: var(--background-color-header);
+
+box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+border-radius: 0px 0px 4px 4px;
 }
 
 .team-name {
+margin-top: 30px;
 margin-bottom: 10px;
 
 color: var(--title-text-color);
@@ -311,7 +313,6 @@ line-height: 1.19;
     font-size: 26px;
     line-height: 1.19;
     text-decoration: none;
-
 }
 
 .logo-footer-web {
@@ -389,7 +390,7 @@ line-height: 1.19;
 margin-top: 0;
 margin-right: 8px;
 margin-bottom: 50px;
-margin-left: 8px;
+margin-left: 0;
 
 display: inline-block;
 padding: 6px 22px;
@@ -415,15 +416,16 @@ text-align: center;
     box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 /* Проекти */
-.projects-link {
+.list-projects {
 margin-top: 0;
-margin-bottom: 30;
-
-color: currentColor;
-text-decoration: none;
+margin-right: 30px;
+margin-bottom: 30px;
+margin-left: 0;
 }
 
 .projects-name {
+width: 370px;
+
 border-top: 1px solid transparent;
 border-right: 1px solid var(--color-border-projects);
 border-bottom: 1px solid var(--color-border-projects);
