--- a/css/style.css
+++ b/css/style.css
@@ -440,11 +440,16 @@ text-align: center;
 .footer-link-address:focus {
     color: var(--accent-color);
 }
+
 /* ---------ПОРТФОЛІО--------- */
+
 /* Кнопки */
 .filter {
 margin-top: 0;
 margin-bottom: 34px;
+display: flex;
+gap: 8px;
+justify-content: center;
 }
 
 .filter-button {
@@ -477,8 +482,10 @@ cursor: pointer;
 box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 /* Проекти */
-.list-projects:nth-child(-n + 6) {
-margin-bottom: 30px;
+.projects {
+display: flex;
+flex-wrap: wrap;
+gap: 30px;
 }
 
 .projects-name {
