--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,10 @@
     --booton-activ-color: #188CE8;
     --background-color-footer: #2F303A;
     /* рамка */
-    --color-border-projects: #eeeeee
+    --color-border-projects: #eeeeee;
+    /* формули */
+    --items: 3;
+    --indent: 30px;
 }
 
 .body {
@@ -264,12 +267,13 @@ line-height: 1.88;
 }
 
 .features {
+--items: 4;
 display: flex;
 gap: 30px;
 }
 
 .features-list {
-width: calc((100% - 3 * 30px) / 4);
+flex-basis: calc((100% - var(--indent) * (var(--items) - 1)) / var(--items));
 }
 
 .features-title {
@@ -304,18 +308,18 @@ text-align: center;
 }
 
 .work {
+--items: 3;
 display: flex;
 gap: 30px;
+}
+
+.work-list {
+flex-basis: calc((100% - var(--indent) * (var(--items) - 1)) / var(--items));
 }
 
 /* Наша команда */
 .fon {
     background-color: var(--secondary-background-color-pag);
-}
-
-.team {
-display: flex;
-gap: 30px;
 }
 
 .team-title {
@@ -330,8 +334,14 @@ line-height: 1.17;
 text-align: center;
 }
 
+.team {
+--items: 4;
+display: flex;
+gap: 30px;
+}
+
 .team-item {
-width: calc((100% - 3 * 30px) / 4);
+flex-basis: calc((100% - var(--indent) * (var(--items) - 1)) / var(--items));
 
 padding-top: 0;
 padding-bottom: 30px;
@@ -496,13 +506,14 @@ box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px
 }
 /* Проекти */
 .projects {
+--items: 3;    
 display: flex;
 flex-wrap: wrap;
 gap: 30px;
 }
 
-.list-projects {
-width: calc((100% - 2 * 30px) / 3);
+.projects-list {
+flex-basis: calc((100% - var(--indent) * (var(--items) - 1)) / var(--items));
 }
 
 .list-projects:nth-child(3n) {
